src/test/deca/syntax/valid/Empty_main.deca
// Description:
//          Empty Main
//
// Résultat:
//Succès
//
{}