src/test/deca/syntax/invalid/ident_carac_interdit2.deca
//  Description :
//            Identificateur contenant un ç
//
// Résultat:
//token recognition error at: 'ç'
//
{
identifiçateur
}